--- a/RapportStage_NunoGuedelha_LAAS-CNRS_2014.tex
+++ b/RapportStage_NunoGuedelha_LAAS-CNRS_2014.tex
@@ -1111,7 +1111,7 @@ H_{11} \ddot{q}_1 = \tau_1 - C'_1 \\
 \iff \ddot{q}_1 = H_{11}^{-1} (\tau_1 - C'_1)
 \end{equation}
 
-Si $H_{11}$ est inversible. Justement, il est important de noter ici que \textbf{$H$ et $H_{11}$ sont définies positives et symétriques\footnotemark[1]}, et toute matrice définie positive est inversible \cite{bib_matriceDefiniePositive_1} \cite{bib_matriceDefiniePositive_2}. On connaît ces propriétés à la base pour $H$. Intéressons-nous alors aux propriétés de $H_{11}$ qui en découlent:
+Si $H_{11}$ est inversible. Justement, il est important de noter ici que \textbf{$H$ et $H_{11}$ sont définies positives et symétriques\footnotemark[1]}, et toute matrice définie positive est inversible \cite[ch.4.2]{bib_matrixComputation}. On connaît ces propriétés à la base pour $H$. Intéressons-nous alors aux propriétés de $H_{11}$ qui en découlent:
 \begin{flushleft}
 \begin{itemize}
 \item[$\centerdot$] Symétrique:
@@ -1119,7 +1119,7 @@ Si $H_{11}$ est inversible. Justement, il est important de noter ici que \textbf
 \textnormal{H est symétrique}  \iff   H = H^T \iff (Q H Q^T)^T = Q (Q H)^T = Q (H^T Q^T) = Q H Q^T
 \end{equation*}
 Donc la matrice permutée $Q H Q^T$ est également symétrique.\medskip
-\item[$\centerdot$] Définie positive: une matrice réelle M carrée de dimension $n \times n$ est définie positive si $x^T H x > 0$ pour tout vecteur colonne $x$, réel et non nul \cite{bib_matriceDefiniePositive_2}:
+\item[$\centerdot$] Définie positive: une matrice réelle M carrée de dimension $n \times n$ est définie positive si $x^T H x > 0$ pour tout vecteur colonne $x$, réel et non nul \cite[ch.4.2]{bib_matrixComputation}:
 \begin{align*}
 \textnormal{H définie positive} \iff  &\forall x: x^T H x > 0 \\
 \textnormal{or} \quad &x^T (Q H Q^T) x = (x^T Q) H ((Q^T x)^T)^T = (x^T Q) H (x^T Q)^T = y H y^T > 0 \quad \forall y \\
@@ -1166,9 +1166,9 @@ Une description un peu plus détaillée de ces algorithmes sera donnée par  la 
 En accord avec l'état de ces composants, et avec la stratégie de leur développement et maintenance menée par l'équipe \emph{Gepetto}, l'emploi des méthodes d'\emph{Eigen} était prioritaire dans la mesure de leur disponibilité et compatibilité avec la nature des algorithmes clients. J'ai dressé dans un premier temps la liste complète des algorithmes de décomposition fournis dans \emph{Eigen}, suivant les critères mentionnés plus haut. En voici la description résumée:
 
 \begin{description}
-\item[La décomposition LU:] il s"agit d'une méthode de décomposition d'une matrice comme produit d'une matrice triangulaire inférieure $L$ (comme "lower", inférieure) et d'une matrice triangulaire supérieure $U$ (comme "upper", supérieure): $A=LU$ \cite{bib_decompositionLUwikipedia} \cite{bib_decompositionLU_2}
-\item[Pivot LU ou PivLU] dans les cas où $A$ n'admet pas de décomposition $LU$. On applique alors une permutation aux lignes de $A$, et on obtient la forme: $A=PLU$, où $P$ est une matrice de permutation. Cette décomposition a deux versions, la partielle et la complète. La version complète a une approche générique, et entre autres, calcule le rang de la matrice $A$ et vérifie si celle-ci est inversible. La version partielle n'effectue pas cette vérification, et minimise les calculs nécessaires pour atteindre le résultat final. La version partielle est donc plus rapide, mais plus sensible aux erreurs d'arrondi \cite{bib_decompositionLU_1} section 1.3.1, pages 25-26.
-\item[QR:] est de la forme: $A=Q R$, où $Q$ est une matrice orthogonale et $R$ une matrice triangulaire \cite{bib_decompositionQRwikipedia}. Cette décomposition est souvent utilisée sur des systèmes linéaires non carrés, et permet, dans ces cas là, de calculer la pseudo-inverse de la matrice $A$.
+\item[La décomposition LU:] il s"agit d'une méthode de décomposition d'une matrice comme produit d'une matrice triangulaire inférieure $L$ (comme "lower", inférieure) et d'une matrice triangulaire supérieure $U$ (comme "upper", supérieure): $A=LU$ \cite[ch.3.2]{bib_matrixComputation}
+\item[Pivot LU ou PivLU] dans les cas où $A$ n'admet pas de décomposition $LU$. On applique alors une permutation aux lignes de $A$, et on obtient la forme: $A=PLU$, où $P$ est une matrice de permutation. Cette décomposition a deux versions, la partielle et la complète. La version complète a une approche générique, et entre autres, calcule le rang de la matrice $A$ et vérifie si celle-ci est inversible. La version partielle n'effectue pas cette vérification, et minimise les calculs nécessaires pour atteindre le résultat final. La version partielle est donc plus rapide, mais plus sensible aux erreurs d'arrondi \cite[ch.3.2]{bib_matrixComputation} section 1.3.1, pages 25-26.
+\item[QR:] est de la forme: $A=Q R$, où $Q$ est une matrice orthogonale et $R$ une matrice triangulaire \cite[ch.5.2]{bib_matrixComputation}. Cette décomposition est souvent utilisée sur des systèmes linéaires non carrés, et permet, dans ces cas là, de calculer la pseudo-inverse de la matrice $A$.
 \item[La factorisation de Cholesky(LLT):] n'est applicable qu'aux matrice symétriques définies positives. Elle décompose $A$ suivant la forme: $A = L L^T$, où $L$ est une matrice triangulaire inférieure. La $LLT$ permet de calculer l'inverse de $A$ ainsi que son déterminant.
 \item[LDLT] est une variante de $LLT$. En évitant d'utiliser des résultats de calculs complexes de racine au sein de fractions, la $LDLT$ est plus robuste et potentiellement moins rapide.
 \item[La décomposition Jacobienne SVD (Singular Value Decomposition):] décompose la matrice $A$ en vecteurs propres, et a la forme: $A = U \Sigma V^\ast$, où $\Sigma$ est la matrice diagonale rectangulaire contenant les valeurs propres de $A$, et où les matrices orthogonales $U$ et $V^\ast$ sont les vecteurs propres de $A$ à gauche et à droite. Cette décomposition permet également le calcul de la pseudo-inverse d'une matrice non carrée, le calcul du rang, etc. Elle est très utilisée dans des applications de traitement du signal. 
@@ -1356,7 +1356,7 @@ On récapitule ci-dessous l'ensemble des 5 étapes de l'algorithme: \\
 Nous allons à présent optimiser le calcul des éléments d'inertie du système. Au lieu de calculer la totalité des termes de $H$, pour en extraire les sous-matrices $H_{11}$ et $H_{21}$ nécessaires à l'algorithme, nous calculons uniquement les termes de ces sous-matrices. Regardons de près l'algorithme \gls{acr_crba} original.\\
 
 \subsubsection{Principe du CRBA}
-Celui-ci calcule tous les termes de $H$ et est déjà optimisé par rapport à la \gls{gls_sparsite} de la matrice induite par la structure ramifiée de l'arbre cinématique du robot. Le CRBA parcours cet arbre en profondeur d'abord, ce qu'on désigne par un parcours \gls{acr_algoDFS} \cite{bib_deepFirstSearch}. L'inertie de chaque corps est initialisée dans le sens descendant de la base (corps 0) vers les feuilles. L'inertie composite de chaque corps assimilé au sous-arbre qu'il supporte est calculée par récursivité dans le sens ascendant des feuilles vers le corps 0. Dans le cas d'un robot humanoïde, le corps 0 pourrait être assimilé au torse, et les feuilles aux mains et aux pieds. S'il n'existe pas de chemin toujours ascendant reliant deux corps $c_i$, $c_j$ à la base $c_0$, alors les termes associés $H_{ij}$ et $H_{ji}$ sont nuls.\\
+Celui-ci calcule tous les termes de $H$ et est déjà optimisé par rapport à la \gls{gls_sparsite} de la matrice induite par la structure ramifiée de l'arbre cinématique du robot. Le CRBA parcours cet arbre en profondeur d'abord, ce qu'on désigne par un parcours \gls{acr_algoDFS}. L'inertie de chaque corps est initialisée dans le sens descendant de la base (corps 0) vers les feuilles. L'inertie composite de chaque corps assimilé au sous-arbre qu'il supporte est calculée par récursivité dans le sens ascendant des feuilles vers le corps 0. Dans le cas d'un robot humanoïde, le corps 0 pourrait être assimilé au torse, et les feuilles aux mains et aux pieds. S'il n'existe pas de chemin toujours ascendant reliant deux corps $c_i$, $c_j$ à la base $c_0$, alors les termes associés $H_{ij}$ et $H_{ji}$ sont nuls.\\
 Avant de continuer, il est indispensable de tenir compte des concepts fondamentaux sur la représentation des arbres cinématiques \cite{ch_algSpa_equationMouvement}:
 
 \begin{itemize}
