--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -97,18 +97,18 @@
 \bibitem{bib_openMpWikipedia}
   http://en.wikipedia.org/wiki/OpenMP
   
-\bibitem{bib_decompositionLUwikipedia}
-  Wikipedia% - Décomposition LU
+%\bibitem{bib_decompositionLUwikipedia}
+%  Wikipedia% - Décomposition LU
 %  http://fr.wikipedia.org/wiki/Décomposition_LU
 
-\bibitem{bib_decompositionLU_1}
-  Cours d'analyse numérique de licence (2010) de R. Herbin, Université d'Aix-Marseille, section 1.3.1, pages 25-26
-  http://www.cmi.univ-mrs.fr/~herbin/PUBLI/anamat.pdf
-  
-\bibitem{bib_decompositionLU_2}
-  P. G. Ciarlet - « Introduction à l'analyse numérique matricielle et à l'optimisation » (1985, rééd. 2001), éd. Masson, coll. Math. Appl. pour la Maîtrise (ISBN 2-225-68893-1)
+%\bibitem{bib_decompositionLU_1}
+%  Cours d'analyse numérique de licence (2010) de R. Herbin, Université d'Aix-Marseille, section 1.3.1, pages 25-26
+%  http://www.cmi.univ-mrs.fr/~herbin/PUBLI/anamat.pdf
+%  
+%\bibitem{bib_decompositionLU_2}
+%  P. G. Ciarlet - « Introduction à l'analyse numérique matricielle et à l'optimisation » (1985, rééd. 2001), éd. Masson, coll. Math. Appl. pour la Maîtrise (ISBN 2-225-68893-1)
 
-\bibitem{bib_decompositionQRwikipedia}
+%\bibitem{bib_decompositionQRwikipedia}
 %  http://fr.wikipedia.org/wiki/Décomposition_QR
   
 %\bibitem{bib_complexiteInversionMatriceDirecte}
@@ -116,7 +116,7 @@
 %  J.B Lasserre,
 %  http://archive.numdam.org/ARCHIVE/RO/RO_1992__26_2/RO_1992__26_2_177_0/RO_1992__26_2_177_0.pdf
 
-\bibitem{bib_deepFirstSearch}
+%\bibitem{bib_deepFirstSearch}
 %  \url{http://fr.wikipedia.org/wiki/Algorithme_de_parcours_en_profondeur}
   
 \end{thebibliography}
