bib complete, doc complet

--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -4,11 +4,12 @@
 \bibitem{bib_featherstone}
   Roy Featherstone,
   \emph{Rigid Body Dynamics Algorithms}.
-  Springer Science+Business Media, LLC,
+  (Springer Science+Business Media, LLC),
   $2^{nd}$ edition,
   2008.
 
 \bibitem{bib_featherstoneSite}
+  site Roy Featherstone
   http://royfeatherstone.org/
 
 %\bibitem{bib_torseur}
@@ -21,55 +22,66 @@
 \bibitem{bib_champVecteurs}
   José-Philippe Pérez,
   \emph{Mécanique, Fondements et applications}.
-  Masson Sciences,
+  (Masson Sciences),
   $6^{e}$ édition, 2001 (ISBN 2-10-005464-3),
   chap. 1 ("Calcul vectoriel. Torseurs") - section IV, V et VI - p. 8-15, 
   chap. 16 (Cinématique du solide et des solides en contact) - section I - p. 257, 295
   
 \bibitem{bib_eigen_tutorial_alg_lin}
   Eigen - Tutorial Linear Algebra:
-  http://eigen.tuxfamily.org/dox/%group__TutorialLinearAlgebra.html
+  http://eigen.tuxfamily.org/dox/group\_\_TutorialLinearAlgebra.html
   
 \bibitem{bib_eigen_tutorial_catalogue}
   Eigen - Catalogue of dense decompositions,
-  %http://eigen.tuxfamily.org/dox/group__TopicLinearAlgebraDecompositions.html
+  http://eigen.tuxfamily.org/dox/group\_\_TopicLinearAlgebraDecompositions.html
   
 \bibitem{bib_eigen_LLT_desc}
   Eigen - LLT detailed description,
-  %http://eigen.tuxfamily.org/dox/classEigen_1_1LLT.html
+  http://eigen.tuxfamily.org/dox/classEigen\_1\_1LLT.html
 
 \bibitem{bib_eigen_tutorial_catalogue_sparse}
   Eigen - Solving Sparse Linear Systems
-  %http://eigen.tuxfamily.org/dox/group__TopicSparseSystems.html
+  http://eigen.tuxfamily.org/dox/group\_\_TopicSparseSystems.html
 
 \bibitem{bib_metaprogramming}
-% C++ Template Metaprogramming
+  David Abrahams, Aleksey Gurtovoy,
+  C++ Template Metaprogramming,
+  Concepts, Tools, and Techniques from Boost and Beyond,
+  Addison Wesley,
+  $6^e$ édition, 2011
 
 \bibitem{bib_matrixComputation}
-% Matrix Computations (Johns Hopkins Studies in the Mathematical Sciences)
-% by Gene H. Golub (Author), Charles F. Van Loan
-
+  Gene H. Golub (Author), Charles F. Van Loan,
+  Matrix Computations (Johns Hopkins Studies in the Mathematical Sciences)
+  $4^{th}$ edition, 2013
+  
 \bibitem{bib_commandeRobotsHumKajita}
-  Introduction à la commande des robots humanoïdes
+  Shuuji Kajita, Hirohisa Hirukawa,
+  Introduction à la commande des robots humanoïdes,
+  (Springer),
+  2009
   
 \bibitem{bib_filtrageTrajectoireCoM}
-  METAPOD - Template M...
-  M. Naveau, J. Carpentier, S. Barthelemy, O. Stasse et P. Soueres
+  M. Naveau, J. Carpentier, S. Barthelemy, O. Stasse et P. Soueres,
+  METAPOD - Template META-Programming applied to Dynamics: CoP-CoM trajectories filtering,
   
 \bibitem{bib_backdrive}
-  Balancing a Humanoid Robot Using Backdrive Concerned Torque control and Direct Angular Momentum Feedback
+  Shuuji Kajita, Kazuhito Yokoi,
+  \emph{Balancing a Humanoid Robot Using Backdrive Concerned Torque control and Direct Angular Momentum Feedback},
+  (International Conference on Robotics \& Automation),
+  2001, Seoul, Korea
   
-\bibitem{bib_backdrive}
-  Shuuji Kajita, Kazuhito Yokoi.
-  \emph{Balancing a Humanoid Robot Using Backdrive Concerned Torque Control and Direct Angular Momentum Feedback}.
-  International Conference on Robotics and Automation.
-  2001
-
 \bibitem{bib_paper_Andrea}
+  Andrea Del Prete, Francesco Nori, Giorgio Metta and Lorenzo Natale
+  Prioritized Motion-Force Control of Constrained Fully-Actuated Robots: "Task Space Inverse Dynamics"
+  (Instituto Italiano di Tecnologia),
+  2014
 
 \bibitem{bib_these_andrea}
-
-% => OK
+  Andrea Del Prete,
+  Control of Contact Forces using Whole-Body Force and Tactile Sensors: Theory and Implementation on the iCub Humanoid Robot,
+  Doctoral course on Robotics, Cognition and Interaction Technologies,
+  2013, Gênes
 
 \bibitem{bib_ros}
   ROS - site internet:
