--- a/tex/pageCouverture.tex
+++ b/tex/pageCouverture.tex
@@ -14,7 +14,7 @@
 		\begin{minipage}{\dimexpr\linewidth-2\fboxsep-2\fboxrule}
 			\centering\Large\bfseries
 			\vskip1cm
-			Implémentation et application d'un algorithme dynamique hybride pour le contrôle d'articulations flexibles
+			Implémentation et application d'un algorithme de Dynamique Hybride pour le contrôle d'articulations flexibles
 			\vskip1cm \kern0pt
 		\end{minipage}
 	}
@@ -22,7 +22,7 @@
 	{\centering
 	{\large Encadrement\par}
 	Maître de stage: Olivier \bsc{Stasse}\par
-	Tuteur universitaire: Vincent \bsc{Durola}
+	Tuteur universitaire: Sylvain \bsc{Durola}
 	}
 	
 	\vskip0pt plus 1fil
